# mango-utils

./: Makefile.am  configure.ac
mng2bin/: Makefile.am  mng2bin.cpp  script.h
mng2bin/configs/: bananapi.mng  bananapi_1part.mng  bananapi_2linux.mng  bananapi_2parts.mng
